--- a/packages/yoroi-extension/app/components/topbar/SideBarCategoryRevamp.scss
+++ b/packages/yoroi-extension/app/components/topbar/SideBarCategoryRevamp.scss
@@ -9,6 +9,7 @@
   font-family: var(--font-regular);
   line-height: var(--theme-sidebar-text-line-height);
   color: var(--theme-sidebar-text-color);
+  transition: 0.3s opacity;
 
   & + & {
     margin-top: 18px;
