--- a/packages/yoroi-extension/app/components/topbar/BuySellAdaButton.scss
+++ b/packages/yoroi-extension/app/components/topbar/BuySellAdaButton.scss
@@ -2,3 +2,22 @@
   display: block !important;
   width: 230px !important;
 }
+
+.buttonRevamp {
+  border: 1px solid #a7afc0 !important;
+  background: white !important;
+  width: 160px !important;
+  max-height: 44px;
+  padding: 11px 0 !important;
+  color: #6b7384 !important;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  line-height: 22px;
+  &:hover {
+    background: transparent;
+  }
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
