--- a/packages/yoroi-extension/app/components/topbar/NavBarTitle.scss
+++ b/packages/yoroi-extension/app/components/topbar/NavBarTitle.scss
@@ -7,3 +7,13 @@
   display: flex;
   align-items: center;
 }
+.titleRevamp {
+  color: var(--theme-navbar-color);
+  font-family: var(--font-medium);
+  font-size: 20px;
+  height: 100%;
+  letter-spacing: 0;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+}
