--- a/packages/yoroi-extension/app/components/topbar/WalletCard.scss
+++ b/packages/yoroi-extension/app/components/topbar/WalletCard.scss
@@ -79,21 +79,28 @@
 }
 .actions {
   min-width: 80px;
+  opacity: 0;
+  transition: opacity 0.3s;
   svg {
     max-width: 24px;
     max-height: 24px;
     color: #6b7384;
   }
-  button {
+  & > * {
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     &:hover {
       background: #eaedf2;
     }
   }
 }
-
+.showActions {
+  opacity: 1;
+}
 .cardWrapper {
   padding: 16px;
   display: flex;
@@ -111,6 +118,10 @@
     cursor: pointer;
     border: 1px solid #eaedf2;
   }
+}
+
+.isDragging {
+  border: 1px solid #eaedf2;
 }
 
 .currentCardWrapper {
