--- a/packages/yoroi-extension/app/components/wallet/add/MainCards.scss
+++ b/packages/yoroi-extension/app/components/wallet/add/MainCards.scss
@@ -31,6 +31,22 @@
   }
 }
 
+:global(.YoroiRevamp) {
+  .heroCardsItemBg {
+    &.bgConnectHW {
+      background-image: url(../../../assets/images/add-wallet/connect-hw-modern.inline.svg);
+    }
+
+    &.bgCreateWallet {
+      background-image: url(../../../assets/images/add-wallet/create-wallet-modern.inline.svg);
+    }
+
+    &.bgRestoreWallet {
+      background-image: url(../../../assets/images/add-wallet/restore-wallet-modern.inline.svg);
+    }
+  }
+}
+
 :global(.YoroiModern) {
   .heroCardsItemBg {
     &.bgConnectHW {
