Updated serialisation-lib version and added displaying tx-size when it's close to the limits

--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendConfirmationDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendConfirmationDialog.scss
@@ -24,6 +24,7 @@
   }
 
   .addressToLabelWrapper,
+  .txSizeWrapper,
   .amountFeesWrapper {
     margin-bottom: 20px;
   }
@@ -41,6 +42,13 @@
     font-size: 15px;
     line-height: 1.38;
     margin-top: 6px;
+  }
+
+  .txSize {
+    font-size: 13px;
+    line-height: 1.28;
+    margin-top: 6px;
+    color: #b0b0b0;
   }
 
   .amountFeesWrapper {
