--- a/packages/yoroi-extension/app/components/wallet/WalletPaperDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/WalletPaperDialog.scss
@@ -13,13 +13,6 @@
   }
 }
 
-.numAddressesSelect {
-  margin: 34px 0 14px 0;
-  label {
-    background-color: var(--theme-settings-pane-background-color);
-  }
-}
-
 .error {
   @include error-message;
   text-align: center;
@@ -34,7 +27,8 @@
   font-family: var(--font-regular);
   text-align: justify;
 
-  h1, h2 {
+  h1,
+  h2 {
     font-family: var(--font-medium);
     font-size: 17px;
     margin-bottom: 11px;
@@ -49,7 +43,8 @@
     margin-left: 20px;
   }
 
-  p, li {
+  p,
+  li {
     color: var(--cmn-default-color-grey);
     font-family: var(--font-regular);
     font-size: 14px;
@@ -67,6 +62,6 @@
   .component {
     :global(.SimpleOptions_options.SimpleOptions_openUpward) {
       margin-bottom: 10px;
-    }    
+    }
   }
 }
