--- a/packages/yoroi-extension/app/components/wallet/assets/AssetsList.scss
+++ b/packages/yoroi-extension/app/components/wallet/assets/AssetsList.scss
@@ -6,7 +6,7 @@
         align-items: center;
         justify-content: space-between;
 
-        .tokens {
+        .assets {
             font-size: 25px;
             line-height: 20px;
         }
@@ -39,12 +39,12 @@
         display: grid;
         grid-template-columns: .4fr 1fr 1fr;
         grid-gap: 10px;
-        padding: 20px 30px;
+        padding: 24px 30px;
         border-top: 1px ;
         border-bottom: 1px;
         border-color:rgba(111, 114, 144, 0.24);
         border-style: solid;
-        color: var(--theme-wallet-plate-secondary-text-color);
+        color: #A7AFC0;
         font-size: 15px;
         box-shadow: 0 5px 7px rgba(0, 0, 0, 0.1);
         margin-bottom: 16px;
@@ -54,6 +54,7 @@
             align-items: center;
             justify-content: flex-start;
             cursor: pointer;
+            color: #A7AFC0;
            & > .headerText {
                margin-right: 3px;
            } 
@@ -73,12 +74,12 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        color: var(--theme-default-color-blue-medium);
+        color: #3154CB;
         font-size: 16px;
-        font-weight: 600;
+        font-weight: 500;
 
         & > .logo {
-            margin-right: 8px;
+            margin-right: 15px;
         }
     }
 
