--- a/packages/yoroi-extension/app/components/wallet/navigation/ReceiveNavigation.scss
+++ b/packages/yoroi-extension/app/components/wallet/navigation/ReceiveNavigation.scss
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  overflow-y: auto;
+  overflow-y: overlay;
   min-height: 80px; // always show at least ~2 elements
   flex: 1;
   padding-bottom: 10px;
@@ -32,7 +32,7 @@
 .filterSection {
   padding-top: 20px;
   padding-bottom: 40px;
-  height: 240px; 
+  height: 240px;
   box-shadow: inset 0 -1px 12px 0 rgba(255,255,255,0.5), inset 0 2px 4px 0 rgba(56,57,61,0.2);
   overflow: overlay;
 }
@@ -44,19 +44,5 @@
     path {
       fill: #8A92A3;
     }
-  }
-}
-.hidden {
-  visibility: hidden;
-}
-.Tooltip {
-  :global(.SimpleBubble_root.SimpleBubble_openUpward)  {
-    margin-bottom: -5px !important;
-    margin-left: 5px;
-  }
-  div[data-bubble-container] {
-    font-size: 14px;
-    transform: translateX(-50px);
-    margin-left: 10px;
   }
 }
