cleanup RP css variables

--- a/packages/yoroi-extension/app/components/settings/categories/general-setting/ThemeSettingsBlock.scss
+++ b/packages/yoroi-extension/app/components/settings/categories/general-setting/ThemeSettingsBlock.scss
@@ -76,7 +76,7 @@
       top: calc(50% - 37px);
       left: 0px;
       background-color: var(--theme-banner-warning-background-color);
-      color: var(--rp-button-text-color, #fff);
+      color: var(--th-palette-common-white);
       padding: 10px;
     }
 
