--- a/packages/yoroi-extension/app/components/widgets/LinkButton.scss
+++ b/packages/yoroi-extension/app/components/widgets/LinkButton.scss
@@ -4,7 +4,7 @@ $blockHeight: 27px;
   display: block;
   width: 100%;
   font-size: 12px;
-  font-family: var(--rp-theme-font-regular);
+  font-weight: 400;
   a {
     display: flex;
     align-items: center;
