--- a/packages/yoroi-extension/app/components/profile/language-selection/LanguageSelectionForm.scss
+++ b/packages/yoroi-extension/app/components/profile/language-selection/LanguageSelectionForm.scss
@@ -18,28 +18,6 @@
   }
 }
 
-:global {
-  .LanguageSelectionForm_languageSelect.SelectOverrides_isOpen .SelectOverrides_selectInput {
-    input, input:hover {
-      border-color: var(--theme-select-language-color);
-      color: var(--theme-select-language-color);
-    }
-
-    &::after {
-      background-color: var(--theme-select-language-color)!important;
-    }
-  }
-
-  .LanguageSelectionForm_languageSelect {
-    .InputOverrides_input:not([disabled]):focus,
-    .InputOverrides_input:not([disabled]):active,
-    .InputOverrides_input:not([disabled]):focus:hover,
-    .InputOverrides_input:not([disabled]):active:hover {
-      border-color: var(--theme-select-language-color);
-    }
-  }
-}
-
 .info {
   color: var(--theme-terms-of-use-text-color);
   text-align: justify;
@@ -49,14 +27,14 @@
   padding: 16px;
 
   h1 {
-    color: var(--rp-formfield-label-text-color);
-    font-family: var(--font-medium);
+    color: var(--th-palette-gray-800);
+    font-weight: 500;
     font-size: 14px;
     margin-bottom: 11px;
   }
 
   p {
-    font-family: var(--font-regular);
+    font-weight: 400;
     font-size: 12px;
     letter-spacing: 0.5px;
     line-height: 1.38;
