--- a/packages/yoroi-extension/app/components/profile/terms-of-use/TermsOfUseText.scss
+++ b/packages/yoroi-extension/app/components/profile/terms-of-use/TermsOfUseText.scss
@@ -8,7 +8,7 @@
   }
 
   h1, h2 {
-    font-family: var(--rp-theme-font-medium);
+    font-weight: 500;
     font-size: 17px;
     margin-bottom: 11px;
   }
@@ -18,7 +18,7 @@
   }
 
   strong {
-    font-family: var(--rp-theme-font-regular);
+    font-weight: 400;
     font-size: 17px;
   }
 
@@ -28,7 +28,7 @@
   }
 
   p, li {
-    font-family: var(--rp-theme-font-regular);
+    font-weight: 400;
     font-size: 14px;
     letter-spacing: 0.5px;
     line-height: 1.38;
@@ -58,5 +58,5 @@
     color: var(--theme-terms-of-use-text-color);
     font-size: 13px;
     line-height: 1.54;
-  }  
+  }
 }
