--- a/packages/yoroi-extension/app/components/settings/categories/general-setting/GeneralSettings.scss
+++ b/packages/yoroi-extension/app/components/settings/categories/general-setting/GeneralSettings.scss
@@ -5,7 +5,7 @@
 
   h1 {
     color: var(--theme-support-settings-text-color);
-    font-family: var(--font-semibold);
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.38;
     margin-bottom: 10px;
@@ -24,21 +24,17 @@
   margin-top: 10px;
 
   h1 {
-    color: var(--rp-formfield-label-text-color);
-    font-family: var(--font-medium);
+    color: var(--th-palette-gray-800);
+    font-weight: 500;
     font-size: 14px;
     margin-bottom: 11px;
   }
 
   p {
-    font-family: var(--font-regular);
+    font-weight: 400;
     font-size: 12px;
     letter-spacing: 0.5px;
     line-height: 1.38;
     margin-bottom: 11px;
   }
-}
-
-:global(.YoroiClassic) .component {
-  margin-bottom: 0;
 }
