--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendForm.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendForm.scss
@@ -71,8 +71,8 @@
 
   .actionLabel {
     color: var(--theme-label-button-color);
-    font-family: var(--rp-checkbox-label-font-family, var(--rp-theme-font-light, "NotoSans-Light, NotoSansCJKjp-Light"), sans-serif);
-    font-size: var(--rp-checkbox-label-font-size, 16px);
+    font-weight: 300;
+    font-size: 16px;
     padding-left: 17px;
   }
 
@@ -108,15 +108,5 @@
 
   .receiverInput {
     letter-spacing: 0;
-
-    :global {
-      .SimpleInput_input {
-        font-family: var(--font-mono-regular);
-      }
-    }
-  }
-
-  fieldset {
-    background: var(--theme-settings-pane-background-color);
   }
 }
