--- a/packages/yoroi-extension/app/components/wallet/my-wallets/WalletRow.scss
+++ b/packages/yoroi-extension/app/components/wallet/my-wallets/WalletRow.scss
@@ -77,7 +77,7 @@
 .contentBody {
   border-radius: 0 0 8px 8px;
   box-shadow: inset 0 -1px 10px 0 rgba(255, 255, 255, 0.5), inset 0 2px 4px 0 rgba(56, 57, 61, 0.2);
-  background-color: var(--yoroi-mywallets-expandable-background-color);
+  background-color: var(--yoroi-palette-gray-50);
 }
 
 .toggle {
