--- a/packages/yoroi-extension/app/components/mixins/card-mixin.scss
+++ b/packages/yoroi-extension/app/components/mixins/card-mixin.scss
@@ -37,7 +37,7 @@
   }
 
   .heroCardsItemDate {
-    color: #6b7384;
+    color: var(--yoroi-palette-gray-600);
     font-size: 12px;
     line-height: 20px;
   }
