--- a/packages/yoroi-extension/app/components/transfer/cards/TransferTypeSelect.scss
+++ b/packages/yoroi-extension/app/components/transfer/cards/TransferTypeSelect.scss
@@ -19,7 +19,7 @@
     color: var(--yoroi-palette-gray-800);
 
     span {
-      color: #6b7384;
+      color: var(--yoroi-palette-gray-600);
       a {
         text-decoration: none;
         color: #3154cb;
