--- a/packages/yoroi-extension/app/components/wallet/staking/dashboard/UpcomingRewards.scss
+++ b/packages/yoroi-extension/app/components/wallet/staking/dashboard/UpcomingRewards.scss
@@ -22,7 +22,7 @@
   padding: 20px 20px;
   flex: 1;
   border-radius: 6px;
-  background-color: #f8f8f8;
+  background-color: var(--yoroi-palette-gray-50);
   min-width: 234px;
   max-width: 278px;
   margin-bottom: 10px;
