--- a/packages/yoroi-extension/app/components/wallet/staking/dashboard/UserSummary.scss
+++ b/packages/yoroi-extension/app/components/wallet/staking/dashboard/UserSummary.scss
@@ -34,7 +34,7 @@
       margin-top: 8px;
       flex-wrap: wrap;
       .note {
-        color: #6b7384;
+        color: var(--yoroi-palette-gray-600);
       }
     }
   }
