--- a/packages/yoroi-extension/app/components/widgets/CodeBlock.scss
+++ b/packages/yoroi-extension/app/components/widgets/CodeBlock.scss
@@ -3,7 +3,7 @@
     background: #f4f4f4;
     border: 1px solid #ddd;
     border-left: 3px solid #f36d33;
-    color: #666;
+    color: var(--yoroi-palette-gray-600);
     page-break-inside: avoid;
     font-family: monospace;
     font-size: 15px;
