--- a/packages/yoroi-extension/app/components/widgets/HorizontalLine.scss
+++ b/packages/yoroi-extension/app/components/widgets/HorizontalLine.scss
@@ -1,6 +1,6 @@
 .fullWidth {
   border: 0;
-  border-bottom: 2px solid #DCE0E9;
+  border-bottom: 2px solid var(--yoroi-palette-gray-200);
   width: 100%;
   margin: 0;
   background-color: #f0f3f5;
