--- a/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
@@ -23,7 +23,7 @@
 }
 
 .label {
-  color: #242838;
+  color: var(--yoroi-palette-gray-900);
   font-size: 14px;
   margin-bottom: 4px;
   letter-spacing: 0;
