--- a/packages/yoroi-extension/app/components/profile/complexity-level/ComplexityLevelForm.scss
+++ b/packages/yoroi-extension/app/components/profile/complexity-level/ComplexityLevelForm.scss
@@ -41,14 +41,14 @@
   .card {
     margin-right: 30px;
     border-radius: 8px;
-    background-color: #ffffff;
+    background-color: var(--yoroi-palette-common-white);
     box-shadow: 0 5px 20px 0 rgba(24, 26, 30, 0.08);
     overflow: hidden;
     &:last-child {
       margin-right: 0;
     }
     .cardImage {
-      background-color: #e5e5e5;
+      background-color: var(--yoroi-palette-gray-100);
       height: 184px;
       display: flex;
       align-items: center;
