--- a/packages/yoroi-extension/app/components/wallet/WalletReceive.scss
+++ b/packages/yoroi-extension/app/components/wallet/WalletReceive.scss
@@ -123,7 +123,7 @@
           position: relative;
 
           background: var(--yoroi-palette-gray-200);
-          color: #6b7384;
+          color: var(--yoroi-palette-gray-600);
           padding: 2px 6px;
           height: 27px;
           &:after {
