--- a/packages/yoroi-extension/app/components/wallet/voting/common.scss
+++ b/packages/yoroi-extension/app/components/wallet/voting/common.scss
@@ -10,7 +10,7 @@ $opacityCommon: 0.7;
 }
 
 .lineText {
-  color: #242838;
+  color: var(--yoroi-palette-gray-900);
   line-height: 22px;
   font-size: 14px;
 }
