--- a/packages/yoroi-extension/app/ergo-connector/components/SupportPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/SupportPage.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  color: #6b7384;
+  color: var(--yoroi-palette-gray-600);
   svg {
     margin-bottom: 24px;
   }
