--- a/packages/yoroi-extension/app/ergo-connector/components/connect-websites/ConnectWebsitesPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect-websites/ConnectWebsitesPage.scss
@@ -2,18 +2,16 @@
   background: #f0f3f5;
   .title {
     padding: 32px 0;
-    color: #6b7384;
+    color: var(--yoroi-palette-gray-600);
     font-size: 16px;
     text-align: center;
-  }
-  .walletList {
   }
   .noItems {
     padding: 60px 32px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #6b7384;
+    color: var(--yoroi-palette-gray-600);
     text-align: center;
     svg {
       margin-bottom: 24px;
