--- a/packages/yoroi-extension/app/ergo-connector/components/connect-websites/DropdownCard.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect-websites/DropdownCard.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
 }
 .expandedHeader {
-  background-color: #eaedf2;
+  background-color: var(--yoroi-palette-gray-100);
 }
 .headerTitle {
   display: flex;
@@ -23,8 +23,8 @@
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    border: 1px solid #17d1aa;
-    background-color: #17d1aa;
+    border: 1px solid var(--yoroi-palette-secondary-300);
+    background-color: var(--yoroi-palette-secondary-300);
   }
 }
 
@@ -47,9 +47,9 @@
 }
 
 .expandedContent {
-  background-color: #eaedf2;
+  background-color: var(--yoroi-palette-gray-100);
   padding: 0 32px;
-  color: #6b7384;
+  color: var(--yoroi-palette-gray-600);
   & > h3 {
     font-size: 14px;
     letter-spacing: 0;
