--- a/packages/yoroi-extension/app/components/topbar/NavBarTitle.scss
+++ b/packages/yoroi-extension/app/components/topbar/NavBarTitle.scss
@@ -8,9 +8,9 @@
   align-items: center;
 }
 .titleRevamp {
-  color: var(--theme-navbar-color);
-  font-family: var(--font-medium);
+  color: var(--yoroi-palette-gray-800);
   font-size: 20px;
+  font-weight: 500;
   height: 100%;
   letter-spacing: 0;
   line-height: 28px;
