--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendForm.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendForm.scss
@@ -83,8 +83,8 @@
     }
 
     p {
-      color: var(--theme-send-confirmation-dialog-send-values-color);
-      font-family: var(--font-medium);
+      color: var(--yoroi-palette-secondary-200);
+      font-weight: 500;
     }
   }
 
