--- a/packages/yoroi-extension/app/components/topbar/NavDropdownContentRevamp.scss
+++ b/packages/yoroi-extension/app/components/topbar/NavDropdownContentRevamp.scss
@@ -11,7 +11,7 @@
   overflow: hidden;
 
   border-radius: 8px;
-  background-color: var(--theme-wallet-dropdown-background-color);
+  background-color: #FFF;
   width: 100%;
   border: 1px solid #eaedf2;
   box-shadow: 0 10px 30px 0 rgba(24, 26, 30, 0.12);
@@ -23,10 +23,10 @@
   justify-content: center;
   button {
     padding: 20px 0;
-    color: #17d1aa;
+    color: var(--yoroi-palette-secondary-300);
     text-transform: uppercase;
     font-size: 14px;
     text-align: center;
-    font-family: var(--font-medium);
+    font-weight: 500;
   }
 }
