--- a/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
+++ b/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: var(--theme-sidebar-background-color);
+  background: linear-gradient(30.09deg, #244abf 0%, #4760ff 100%);
 }
 
 .header {
@@ -24,7 +24,7 @@
     transform: scale(0.9);
   }
   & svg > path {
-    fill: var(--theme-sidebar-icon-color);
+    fill: white;
   }
 }
 
@@ -32,12 +32,12 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  & > *:nth-child(5) {
-    position: relative;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-  }
-  & > *:nth-child(5)::after {
+  // & > *:nth-child(5) {
+  //   position: relative;
+  //   padding-bottom: 20px;
+  //   margin-bottom: 20px;
+  // }
+  & > *:nth-child(4)::after {
     content: '';
     position: absolute;
     width: 24px;
