--- a/packages/yoroi-extension/app/components/wallet/assets/AssetsList.scss
+++ b/packages/yoroi-extension/app/components/wallet/assets/AssetsList.scss
@@ -15,13 +15,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: var(--theme-nav-item-background-color);
+            background-color: var(--yoroi-palette-gray-50);
             border-radius: 8px;
             width: 350px;
             padding: 10px 12px;
 
             & > input {
-                background-color: var(--theme-nav-item-background-color) ;
+                background-color: var(--yoroi-palette-gray-50) ;
                 border: none;
                 width: 100%;
             }
@@ -32,7 +32,7 @@
                 padding: 3px 4px;
             }
         }
-       
+
     }
 
     .lockedAssets {
@@ -43,7 +43,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            background-color: var(--theme-nav-item-background-color);
+            background-color: var(--yoroi-palette-gray-50);
             border-radius: 8px;
             width: auto;
             padding: 7px 15px;
@@ -51,13 +51,13 @@
             font-size: 16px;
             line-height: 24px;
         }
-        
+
         .label {
-            color: var(--theme-wallet-dropdown-secondary-text-color)
+            color: var(--yoroi-palette-gray-600)
         }
 
         .beforeDecimal, .tokenName {
-            font-family: var(--font-medium);
+            font-weight: 500;
         }
 
         .tokenName {
@@ -65,9 +65,6 @@
             display: inline-block;
         }
 
-        .afterDecimal {
-            font-family: var(--font-regular);
-        }
     }
 
     .columns {
@@ -92,7 +89,7 @@
             color: #A7AFC0;
            & > .headerText {
                margin-right: 3px;
-           } 
+           }
         }
     }
 
@@ -119,7 +116,7 @@
     }
 
     .amount {
-        font-weight: 800;
+        font-weight: 700;
     }
 
     .noAssetFound {
