style and storybook fixes

--- a/packages/yoroi-extension/app/components/widgets/CopyableAddress.scss
+++ b/packages/yoroi-extension/app/components/widgets/CopyableAddress.scss
@@ -22,7 +22,7 @@
     }
   }
   .copyIconBig:hover {
-    background-color: var(--yoroi-palette-gray-50);
+    background-color: var(--yoroi-palette-gray-200);
   }
 }
 
