--- a/packages/yoroi-extension/app/components/wallet/transactions/Transaction.scss
+++ b/packages/yoroi-extension/app/components/wallet/transactions/Transaction.scss
@@ -62,7 +62,7 @@
     min-width: fit-content;
     height: fit-content;
     width: 105px;
-    background: var(--yoroi-palette-gray-50);
+    background: var(--yoroi-palette-gray-200);
     font-size: 10px;
     letter-spacing: 0;
   }
