Display the buttons inside a grid

--- a/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
@@ -143,11 +143,8 @@
 
 .wrapperBtn {
   padding-top: 16px;
-  display: flex;
-  button {
-    font-size: 14px;
-  }
-  button + button {
-    margin-left: 22px;
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+ 
 }
