--- a/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
@@ -28,15 +28,17 @@
       font-size: 14px;
       line-height: 22px;
     }
-    .utxoWrapper {
+    .utxo {
       display: flex;
       align-items: center;
       justify-content: flex-end;
       margin-top: 8px;
-      .utxo {
-        font-size: 16px;
-        line-height: 24px
-      }
+      font-size: 16px;
+      line-height: 24px;
+      cursor: pointer;
+      width: 100%;
+      color: var(--yoroi-palette-gray-800);
+
     }    
   }
 
@@ -90,55 +92,6 @@
   margin-bottom: 4px;
   letter-spacing: 0;
   line-height: 22px;
-}
-
-.rowData {
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--yoroi-palette-gray-600);
-  word-break: break-all;
-  line-height: 22px;
-}
-.hash {
-  font-family: 'RobotoMono';
-  font-weight: 400;
-}
-.addressItem {
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: minmax(232px, 550px) 150px 1fr;
-  align-items: center;
-}
-* + h2,
-* + .row {
-  margin-top: 18px;
-}
-
-.row {
-  margin-bottom: 24px;
-}
-.details {
-  margin-bottom: 24px;
-  display: flex;
-  justify-content: space-between;
-  & > * {
-    flex: 1 1 48%;
-    max-width: 48%;
-  }
-}
-
-.addressHeader {
-  margin-bottom: 8px;
-  padding-top: 24px;
-  border-top: 1px solid #dce0e9;
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: minmax(232px, 550px) 150px 1fr;
-}
-
-.addressToList,
-.addressFromList {
-  padding-bottom: 24px;
 }
 
 .wrapperBtn {
