--- a/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
@@ -22,6 +22,17 @@
       margin-bottom: 4px;
     }
 
+    .more {
+      font-size: 14px;
+      cursor: pointer;
+      font-weight: 500;
+      color: var(--yoroi-palette-secondary-200);
+    }
+
+    .more:hover {
+      color: var(--yoroi-palette-secondary-300)
+    }
+
     .hash {
       margin-top: 4px;
       margin-bottom: 8px;
