fix fonts, styles and intl

--- a/packages/yoroi-extension/app/components/topbar/NavDropdownRevamp.scss
+++ b/packages/yoroi-extension/app/components/topbar/NavDropdownRevamp.scss
@@ -1,9 +1,7 @@
 .wrapper {
   position: relative;
-  width: 340px;
-  padding: 12px 0;
-  padding-left: 24px;
-  padding-right: 12px;
+  width: 320px;
+  padding: 12px 12px 12px 24px;
   display: flex;
   align-items: center;
 }
