Make the assets name link that open to the cardano scan

--- a/packages/yoroi-extension/app/components/wallet/assets/AssetsList.scss
+++ b/packages/yoroi-extension/app/components/wallet/assets/AssetsList.scss
@@ -113,6 +113,11 @@
         & > .logo {
             margin-right: 15px;
         }
+
+        & > a {
+            text-decoration: none;
+            color: #3154CB;
+        }
     }
 
     .amount {
