--- a/packages/yoroi-extension/app/components/topbar/SubMenuItem.scss
+++ b/packages/yoroi-extension/app/components/topbar/SubMenuItem.scss
@@ -13,6 +13,7 @@
   &.active {
     border-bottom-color: var(--yoroi-palette-secondary-300);
     color: var(--yoroi-palette-secondary-300);
+    font-weight: 500;
 
     &:hover {
       border-bottom-color: var(--yoroi-palette-secondary-300);
