--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
@@ -1,10 +1,25 @@
 .component {
     height: 100%;
     width: 100%;
-    
-    .noItems {
-        background-color: greenyellow;
-        width: 100%;
-        height: 100%;
+}
+
+.noItems {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--yoroi-palette-gray-600);
+    text-align: center;
+    svg {
+      margin-bottom: 24px;
+    }
+    h3 {
+      font-size: 26px;
+      font-weight: 500;
+      margin-bottom: 20px;
+      line-height: 35px;
     }
 }
