--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
@@ -1,6 +1,55 @@
 .component {
     height: 100%;
     width: 100%;
+    background-color: #F0F3F5;
+    display: flex;
+    justify-content: center;
+
+    .container {
+      width: 750px;
+      height: 600px;
+      overflow-y: scroll;
+      background-color: white;
+      margin-top: 40px;
+      border-radius: 8px;
+      -ms-overflow-style: none;
+      scrollbar-width: none;  
+    }
+
+    .container::-webkit-scrollbar {
+      display: none;
+    }
+
+    .header {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      box-shadow: 0 2px 4px 0 rgba(56,57,61,0.2);
+
+      & > p {
+        padding-left: 40px;
+        padding-top: 28px;
+        color: #A7AFC0;
+        font-family: Rubik;
+        font-size: 14px;
+        letter-spacing: 0;
+        line-height: 22px;
+        padding-bottom: 16px;
+      }
+    }
+    
+    .chain {
+      padding: 24px;
+
+      & > h1 {
+        margin-top: 8px;
+        margin-bottom: 8px;
+        color: #A7AFC0;
+        font-family: Rubik;
+        font-size: 14px;
+        letter-spacing: 0;
+        line-height: 22px;
+      }
+    }
 }
 
 .noItems {
