Update when hover

--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
@@ -43,6 +43,7 @@
       & > h1 {
         margin-top: 8px;
         margin-bottom: 8px;
+        margin-left: 14px;
         color: #A7AFC0;
         font-family: Rubik;
         font-size: 14px;
