--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/WalletRow.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/WalletRow.scss
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 12px;
     border: 1px solid #ffff;
+    border-radius: 8px;
 
     &:hover {
         border: 1px solid #EAEDF2;
